Reset KDialog::Ok to false on each checkPassword

BUG: 328667